<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/registration_header"
            android:layout_marginBottom="26dp"
            app:layout_constraintTop_toTopOf="@id/parent_constraint"
            app:layout_constraintBottom_toTopOf="@id/registration_name_layout"
            app:layout_constraintRight_toRightOf="@id/parent_constraint"
            app:layout_constraintLeft_toLeftOf="@id/parent_constraint"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@id/registration_password_layout"
            app:layout_constraintRight_toRightOf="@id/parent_constraint"
            app:layout_constraintLeft_toLeftOf="@id/parent_constraint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@id/confirm_button"
            app:layout_constraintTop_toBottomOf="@id/registration_name_layout"
            app:layout_constraintRight_toRightOf="@id/parent_constraint"
            app:layout_constraintLeft_toLeftOf="@id/parent_constraint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/confirm"
            app:layout_constraintTop_toBottomOf="@id/registration_password_layout"
            app:layout_constraintRight_toRightOf="@id/parent_constraint"
            app:layout_constraintLeft_toLeftOf="@id/parent_constraint"
            app:layout_constraintBottom_toTopOf="@id/layout_for_question"/>

        <LinearLayout
            android:id="@+id/layout_for_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/confirm_button"
            app:layout_constraintRight_toRightOf="@id/parent_constraint"
            app:layout_constraintLeft_toLeftOf="@id/parent_constraint"
            app:layout_constraintBottom_toBottomOf="@id/parent_constraint" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_already_registered"/>

            <TextView
                android:id="@+id/if_user_already_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_login"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>